--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Complejidad Algoritmica</title>
   </head>
   <body>
     <div id="app">
@@ -12,7 +12,7 @@
         <div id="canva"></div>
         
 
-        <aside id="menu" class="absolute w-56 h-full top-0">
+        <aside id="menu" class="absolute w-56 h-full top-0 overflow-scroll p-4 bg-[#2C2C2E]">
 
         </aside>
 
