--- a/index.html
+++ b/index.html
@@ -6,20 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Complejidad Algoritmica</title>
   </head>
-  <body>
-    <div id="app">
-      <main class="h-full relative">
-        <div id="canva"></div>
-        
-
-        <aside id="menu" class="absolute w-56 h-full top-0 overflow-scroll p-4 bg-[#2C2C2E]">
-
-        </aside>
-
-        
-      </main>
-    </div>
-    <script type="module" src="/src/main.ts"></script>
-    <script type="module" src="/src/service.ts"></script>
+  <body class="absolute">
+    <ul id="menu" class="absolute top-0 z-30"></ul>
+    <!-- <script type="module" src="/src/main.ts"></script> -->
+    <!-- <script type="module" src="/src/service.ts"></script> -->
+    <script type="module" src="/src/pixijs.ts"></script>
   </body>
 </html>
