a few changes made

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </head>
   <body class="absolute">
     <ul id="menu" class="absolute top-0 z-30"></ul>
-    <!-- <script type="module" src="/src/main.ts"></script> -->
-    <!-- <script type="module" src="/src/service.ts"></script> -->
-    <script type="module" src="/src/pixijs.ts"></script>
+
+    <section id="canva"></section>
+
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
