--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Complejidad Algoritmica</title>
   </head>
   <body class="absolute">
-    <ul id="menu" class="absolute top-0 z-30"></ul>
+    <ul id="menu" class="absolute top-0 z-30">
+      <li>Current : <span id="current"></span></li>
+    </ul>
 
     <section id="canva"></section>
 
