--- a/index.html
+++ b/index.html
@@ -116,11 +116,10 @@
                         />
                     </label>
 
-                    <ul id="countries-filters"></ul>
                 </section>
 
                 <button
-                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-[#fefefe] text-black w-full hover:bg-primary/90 h-10 px-4 py-2"
+                    class="bg-white text-black mt-4 hover:bg-zinc-100"
                 >
                     Buscar
                 </button>
